--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Welcome to Checklist Creator</h1>
+
+<% @items.each do |item| %>
+	<div class="jumbotron">
+	<h2><%= link_to item.title, item %></h2>
+	<p><%= item.description %></p>
+	</div>
+<% end %>
+
+<%= link_to "New Item", new_item_path%>
